[project]
name = "my_city_dashboard"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ali Niarais", email = "ali.niareis@gmaill.com"},
]
dependencies = ["streamlit>=1.51.0", "pandas>=2.3.3", "plotly>=6.4.0", "pydeck>=0.9.1", "altair>=5.5.0", "scipy>=1.16.3", "streamlit-folium>=0.25.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
